--- a/client/src/components/landing.css
+++ b/client/src/components/landing.css
@@ -1,5 +1,6 @@
 
 .landing {
+    background-color: black;
     display: flex;
     flex-direction: row;
     color: #494949;
@@ -9,8 +10,9 @@
     border: #494949;
   }
   
-  .Title {
+  .Titulo {
     font-family: "Abril Fatface", cursive;
+    color: azure;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -21,11 +23,17 @@
   
   }
   
-  .dogPic {
+  .Zeus{
     display: flex;
-    align-items: stretch;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    align-items: center;
     max-width: 100%;
     max-height: 100%;
-    position: absolute bottom 0;
     margin: 0;
+  }
+  .fondo{ 
+    background-color: black;
+    padding: 150px;
   }
