--- a/client/src/components/landing.css
+++ b/client/src/components/landing.css
@@ -19,7 +19,8 @@
     justify-content: center;
     align-self:center;
     align-content: center;
-    width: 530px;
+    width: 700px;
+    padding: 100 px;
   
   }
   .Zeus{
@@ -28,11 +29,30 @@
     align-items: center;
     justify-content: center;
     align-items: center;
-    max-width: 100%;
-    max-height: 100%;
+    max-width: 200%;
+    max-height: 200%;
     margin: 0;
+  }
+  .Ingreso{
+    -webkit-border-radius: 7;
+    -moz-border-radius: 7;
+    border-radius: 7px;
+    font-family: Arial;
+    color: #ac8971;
+    font-size: 36px;
+    background: #494949;
+    padding: 11px 20px 10px 20px;
+    text-decoration: none;
+  }
+  .Ingreso:hover {
+    color: #494949;
+    background: #ac8971;
+    border-color: #43312f;
+    text-transform: uppercase;
+    transition: all 0.2s ease 0s;
+    border-radius: 1rem;
   }
   .fondo{ 
     background-color: black;
-    padding: 150px;
+    padding: 200px;
   }
