--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,15 @@
+body{
+  display: flex;
+  flex-direction: column;
+  background-color: #b8eeee;
+  background-repeat: no-repeat;
+  background-position: bottom ;
+  background-attachment: fixed;
+  background-size: cover;
+  max-height: 100vh;
+  margin: 0;
+  /* justify-content: center; */
+}
 .App {
   text-align: center;
 }
