--- a/client/src/components/landing.css
+++ b/client/src/components/landing.css
@@ -2,11 +2,11 @@
 .landing {
     background-color: whitesmoke;
     display: flex;
-    flex-direction: row;
+    flex-direction: center;
     color: #494949;
     text-align: center;
     justify-content: center;
-    align-items: flex-start;
+    align-items: column;
     border: #494949;
   }
   
@@ -15,7 +15,7 @@
     font-size: 50px;
     color: black;
     display: flex;
-    flex-direction: column;
+    flex-direction: center;
     align-items: center;
     justify-content: center;
     align-self:center;
@@ -33,7 +33,8 @@
     align-items: center;
     width: 67%;
     height: 50%;
-    margin-top: -31%;
+    margin-top: -238px;
+   
   }
   .Ingreso{
     -webkit-border-radius: 7;
@@ -45,9 +46,12 @@
     background: #494949;
     padding: 11px 20px 10px 20px;
     text-decoration: none;
-    float: right;
-    margin-right: 300px;
-    margin-top: 200px;
+
+    margin-top: 330px;
+    float:inline-end;
+    margin-left: 450px;
+    overflow: hidden;
+   
   }
   .Ingreso:hover {
     color: #494949;
@@ -56,10 +60,19 @@
     text-transform: uppercase;
     transition: all 0.2s ease 0s;
     border-radius: 1rem;
+    
+    
   }
   .fondo{ 
     background-color: whitesmoke;
     padding: 10px;
   }
+  /* .boton{
+    display: flex;
+    margin-top: 400px;
+    float: right;
+    margin-right: 150px;
+    margin-bottom: 350px;
+  } */
 
   @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap');
