--- a/client/src/components/DogCreate.css
+++ b/client/src/components/DogCreate.css
@@ -3,17 +3,21 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: #ac8971;
+    background-color: #c4c4c4;
     min-width: fit-content;
     margin: 1% 30% 1% 30%;
     padding: 1em;
     max-width: 40em;
     list-style:none;
+    margin-top: 20px;
   }
+.formulario h1{
+  margin-top: -5px;
+}
   .estilo{
     width: 100%;
     padding: 5px;
-    border: 1px solid #ccc;
+    border: 1px solid #d9d9d9;
     border-radius: 4px;
     box-sizing: border-box;
     resize: vertical;
@@ -21,7 +25,7 @@
   input[type="number"] {
     width: 100%;
     padding: 5px;
-    border: 1px solid #ccc;
+    border: 1px solid #d9d9d9;
     border-radius: 4px;
     box-sizing: border-box;
     resize: vertical;
@@ -40,7 +44,19 @@
     font-weight: bold;
   }
   
-  button[type="submit"] {
+.formulario button[type="submit"] {
+    margin: 1px;
+    background-color: #494949;
+    color: white;
+    padding: 5px 10px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    float: center;
+    margin-top: 15px;
+    margin-left: 55px;
+  }
+.botonV {
     margin: 1px;
     background-color: #494949;
     color: white;
@@ -49,8 +65,9 @@
     border-radius: 4px;
     cursor: pointer;
     float: right;
+    margin-top: 15px;
+
   }
-  
   .MinMax {
     display: flex;
     flex-direction: row;
@@ -63,7 +80,7 @@
     margin: 0.1em;
     border-radius: 0.4em;
     font-family: sans-serif;
-    color: #e1f8f8;
+    color: #d9d9d9;
   }
   
   .DelTemper {
