--- a/client/src/components/Home.css
+++ b/client/src/components/Home.css
@@ -31,15 +31,14 @@
   
   .Reset {
     margin: 5px;
-    background-color: black;
+    background-color: #494949;
     color: white;
     padding: 10px 10px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
     float: center;
-    
-   
+
   }
   .paginado {
     display: flex;
@@ -109,6 +108,7 @@
   .Nav h3{
     display:inline-block;    
     color: whitesmoke;
+    margin-left: 30px;
   }
   .Nav h6 {
     display: flex;
